feat(Nibiru-Home/sprints#5): Tests Arreglados